# mr-guardian

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-all.txt  requirements-dashboard.txt  requirements-dev.txt  requirements-server.txt  requirements.txt
.claude/: launch.json
Docs/: MLStand.txt  MR Guardian.txt  agent-setup-prompt.md  api-eta-note.md  api-feed-endpoints-ticket.md  api-reset-endpoint-ticket.md  api-reset.md  api-review-deletion.md  api-review-feeds.md  api-review-finality.md  architecture.md  beta-phase-eta-widget-ticket.md  biweekly-developer-review-backend-ticket.md  biweekly-developer-review-display-ticket.md  cost-frontend-display-ticket.md  dashboard-improvements-ticket.md  developer-ai-profiles.md  developer-detail-improvements-ticket.md  developer-performance.md  docker-deployment.md  installation.md  lead-dashboard.md  llm-cost-telemetry-ticket.md  llm-rule-authoring.md  manual-review-submission.md  packaging.md  pm-dashboard.md  render-loader-cost-port-ticket.md  review-history-schema.md  rule-generation-prompt.md  single-review-report-ticket.md  status.txt  ticket-key-conventions.md  unity-rule-roadmap.md  weekly-llm-review.md  weekly-review-history-ticket.md
app/: __init__.py  api.py  streamlit_app.py  streamlit_components.py  streamlit_style.py
hosting/: hosting-cost.md  hosting-specs.md
mr_guardian/: __init__.py  config.py
mr_guardian/cli/: main.py
mr_guardian/core/: __init__.py  dashboard.py  dashboard_eta.py  developer_performance.py  developer_profile.py  developer_review.py  engine.py  gitlab_reviews.py  gitlab_webhooks.py  history_reset.py  inspection.py  lead_dashboard.py  llm_pricing.py  manual_review.py  metadata.py  pm_dashboard.py  review.py  review_components.py  review_deletion.py  review_finality.py  review_history.py  review_rules.py  review_score.py  ticket_keys.py  webhook_jobs.py  (+1 more)
scripts/: docker-entrypoint.sh
(+103 files in other folders)
