[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-guardian"
version = "0.1.0"
description = "Unity Merge Request review assistant using YAML policies, review history, and optional AI summaries."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["unity", "merge-request", "code-review", "gitlab", "yaml"]
authors = [
  { name = "MR Guardian" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20240311",
]

dashboard = [
  "streamlit>=1.35.0",
  "pandas>=2.2.0",
]

server = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

gitlab = [
  "python-gitlab>=4.6.0",
]

ai = [
  "openai>=1.35.0",
]

all = [
  "mr-guardian[dashboard,server,gitlab,ai]",
]

[project.scripts]
mr-guardian = "mr_guardian.cli.main:app"

[tool.setuptools.packages.find]
include = ["mr_guardian*", "app*"]

[tool.setuptools.package-data]
mr_guardian = ["py.typed", "defaults/yaml/*.yml", "defaults/yaml/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mr_guardian"]

[tool.coverage.run]
source = ["mr_guardian"]

[tool.coverage.report]
show_missing = true
skip_covered = true
